@@ -4,6 +4,7 @@ pavo 1.0
 MINOR FEATURES AND BUG FIXES
 * vismodel() vonkries = TRUE does not return a NULL result
 * vismodel() works with a single spectrum object
+* tcsplot() allows greater control of tetrahedron appearance
 
 pavo 0.3-1
 ------------------------------------------------------------------------------
